Fix center alignment of footer links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,10 @@ footer a {
     margin-right: 1em;
 }
 
+footer a:last-child {
+    margin-right: 0;
+}
+
 
 /* Posts */
 article {
